--- a/src/views/DashboardView.fxml
+++ b/src/views/DashboardView.fxml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlls.DashboardViewController">
+<AnchorPane prefHeight="485.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlls.DashboardViewController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="491.0">
+      <VBox prefHeight="485.0" prefWidth="730.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane prefHeight="257.0" prefWidth="606.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <ImageView fitHeight="150.0" fitWidth="338.0" pickOnBounds="true" preserveRatio="true" />
+            <GridPane hgap="10.0" prefHeight="485.0" prefWidth="730.0" vgap="10.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <ImageView fitHeight="68.0" fitWidth="249.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <ImageView fitHeight="70.0" fitWidth="246.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
-                  <ImageView fitHeight="87.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
+                  <VBox spacing="5.0">
+                     <children>
+                        <Label text="Students" />
+                        <ListView />
+                        <Button mnemonicParsing="false" text="Create Student" />
+                     </children>
+                  </VBox>
+                  <VBox spacing="5.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label text="Professor" />
+                        <ListView />
+                        <Button mnemonicParsing="false" text="Create Professor" />
+                     </children>
+                  </VBox>
+                  <VBox spacing="5.0" GridPane.columnIndex="1">
+                     <children>
+                        <Label text="Courses" />
+                        <ListView />
+                        <Button mnemonicParsing="false" text="Create Courses" />
+                     </children>
+                  </VBox>
                </children>
             </GridPane>
          </children>
