--- a/src/views/DashboardView.fxml
+++ b/src/views/DashboardView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -8,7 +9,10 @@
    <children>
       <VBox prefHeight="485.0" prefWidth="730.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="338.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="150.0" fitWidth="338.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Logo.png" />
+               </image></ImageView>
             <GridPane hgap="10.0" prefHeight="485.0" prefWidth="730.0" vgap="10.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -43,6 +47,10 @@
                </children>
             </GridPane>
          </children>
+         <stylesheets>
+            <URL value="@styles.css" />
+            <URL value="@styles.css" />
+         </stylesheets>
       </VBox>
    </children>
 </AnchorPane>
