--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -1,5 +1,5 @@
-.root {
-    -fx-background-color: linear-gradient(from 10px 10px to 400px 400px, #3D353C, #454654 );
+.root{
+    -fx-background-color: linear-gradient(from 10px 10px to 400px 400px, #3d353c, #454654);
     -fx-font-family: "Comic Sans MS";
     -fx-font-size: 10px;
 }
@@ -8,7 +8,6 @@
     -fx-font-size: 24px;
 }
 
-.button{
-    -fx-background-color: 10;
+.button {
+    -fx-background-radius: 10;
 }
-
